--- a/src/app/view/main/main.component.css
+++ b/src/app/view/main/main.component.css
@@ -61,3 +61,181 @@ mat-divider {
   height: 100%;
   overflow: hidden;
 }
+
+/* ---------- LIVE-CHAT ---------- */
+
+#live-chat {
+  z-index: 5000;
+  bottom: 0;
+  font-size: 12px;
+  left: 24px;
+  position: fixed;
+  width: 300px;
+  opacity: 0;
+  transition: .5s ease-in-out all;
+}
+
+#live-chat header {
+  background: #293239;
+  border-radius: 5px 5px 0 0;
+  color: #fff;
+  cursor: pointer;
+  padding: 12px 24px 20px;
+  height: 15px;
+}
+
+#live-chat h4:before {
+  background: #1a8a34;
+  border-radius: 50%;
+  content: "";
+  display: inline-block;
+  height: 8px;
+  margin: 0 8px 0 0;
+  width: 8px;
+}
+
+#live-chat h4 {
+  font-size: 12px;
+}
+
+#live-chat h5 {
+  font-size: 10px;
+}
+
+#live-chat form {
+  padding: 24px;
+}
+
+#live-chat input[type="text"] {
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: 8px;
+  outline: none;
+  width: 234px;
+}
+
+#live-chat-comments {
+  bottom: 0;
+  font-size: 12px;
+  left: 24px;
+  position: fixed;
+  width: 300px;
+  opacity: 0;
+  transition: .5s ease-in-out all;
+}
+
+#live-chat-comments header {
+  background: #293239;
+  border-radius: 5px 5px 0 0;
+  color: #fff;
+  cursor: pointer;
+  padding: 16px 24px;
+}
+
+#live-chat-comments h4:before {
+  background: #1a8a34;
+  border-radius: 50%;
+  content: "";
+  display: inline-block;
+  height: 8px;
+  margin: 0 8px 0 0;
+  width: 8px;
+}
+
+#live-chat-comments h4 {
+  font-size: 12px;
+}
+
+#live-chat-comments h5 {
+  font-size: 10px;
+}
+
+#live-chat-comments form {
+  padding: 24px;
+}
+
+#live-chat-comments input[type="text"] {
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: 8px;
+  outline: none;
+  width: 234px;
+}
+
+.chat-message-counter {
+  background: #e62727;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  display: none;
+  font-size: 12px;
+  font-weight: bold;
+  height: 28px;
+  left: 0;
+  line-height: 28px;
+  margin: -15px 0 0 -15px;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  width: 28px;
+}
+
+.chat-close {
+  background: #1b2126;
+  border-radius: 50%;
+  color: #e62727;
+  display: block;
+  float: right;
+  font-size: 10px;
+  height: 16px;
+  line-height: 16px;
+  margin: 2px 0 0 0;
+  text-align: center;
+  width: 16px;
+}
+
+.chat {
+  background: #fff;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  width: 100%;
+}
+
+.chat-history {
+  height: 252px;
+  padding: 8px 24px;
+  overflow-y: auto;
+}
+
+.chat-message {
+  margin: 16px 0;
+}
+
+.chat-message img {
+  border-radius: 50%;
+  float: left;
+}
+
+.chat-message-content {
+  margin-left: 56px;
+}
+
+.chat-time {
+  float: right;
+  font-size: 10px;
+}
+
+.chat-feedback {
+  font-style: italic;
+  margin: 0 0 0 80px;
+}
+
+.show {
+  opacity: 1 !important;
+}
+.full-width {
+  width: 100%;
+}
+
+.full-width .mat-icon {
+  cursor: pointer;
+}
