--- a/src/app/view/home/announcementViewer/announcementViewer.component.html
+++ b/src/app/view/home/announcementViewer/announcementViewer.component.html
@@ -65,8 +65,11 @@
 </style>
 <div style="width: 100%;display: block">
   <h2 style="padding-left: 15px;margin-right: 10px; display: inline-block">Announcement</h2>
-  <button mat-raised-button mat-dialog-close style="display: inline-block" (click)="close()">
+  <button mat-raised-button mat-dialog-close style="margin-right: 10px; display: inline-block" (click)="close()">
     Close
+  </button>
+  <button mat-raised-button mat-dialog-close style="display: inline-block" (click)="chat()">
+    Chat
   </button>
 </div>
 <mat-divider></mat-divider>
