fix images paths and routes

--- a/src/app/view/main/main.component.html
+++ b/src/app/view/main/main.component.html
@@ -226,7 +226,7 @@
               </button>
             </mat-expansion-panel>
           </mat-accordion>
-          <img src="../../../assets/logo.png" style="display: block;margin: 15px auto;width: 80%;">
+          <img src="assets/logo.png" style="display: block;margin: 15px auto;width: 80%;">
           <mat-divider></mat-divider>
         </div>
         <div style="flex: 1 1 auto;">
