--- a/src/app/view/messages/messages.component.html
+++ b/src/app/view/messages/messages.component.html
@@ -18,7 +18,7 @@
   </aside>
   <main>
     <header>
-      <img style="width: 55px;height: 55px" src="../../../assets/nophoto.png" alt="">
+      <img style="width: 55px;height: 55px" src="assets/nophoto.png" alt="">
       <div>
         <h2 *ngIf="currentConversation != null">Chat with {{getConversationNames(currentConversation)}}</h2>
         <h3>already {{totalMessages}} messages</h3>
