--- a/src/app/view/announcement/announcement.component.html
+++ b/src/app/view/announcement/announcement.component.html
@@ -34,7 +34,7 @@
     <button mat-raised-button style="width: 290px">
       Delete selected announcements
     </button>
-    <mat-paginator [length]="this.announcements.length" aria-label="Select page" #paginator (page)="pageChanged()"
+    <mat-paginator [length]="this.announcementSearchForm.total" aria-label="Select page" #paginator (page)="pageChanged()"
                    style="position: sticky; bottom: 0; width: 100%; background-color: #f0f0f0"></mat-paginator>
   </mat-toolbar-row>
 </mat-toolbar>
