--- a/src/app/view/announcement/announcementDetails/announcementDetails.component.html
+++ b/src/app/view/announcement/announcementDetails/announcementDetails.component.html
@@ -25,7 +25,7 @@
       <mat-option *ngFor="let contact of contacts" [value]="contact">{{contact.name}}</mat-option>
     </mat-select>
   </mat-form-field>
-  <mat-icon>add_box</mat-icon>
+  <mat-icon (click)="openContactDetails()" style="cursor: pointer">add_box</mat-icon>
   <br>
   <mat-form-field appearance="fill">
     <mat-label>[Select announcement type]</mat-label>
@@ -41,6 +41,10 @@
       <mat-option *ngFor="let measure of measures" [value]="measure.measureCode">{{measure.name}}</mat-option>
     </mat-select>
   </mat-form-field>
+  <br>
+  <button mat-raised-button style="display: inline-block" (click)="openProductDetails(null)">
+    Add product
+  </button>
   <div
     style="width: 100%;overflow-x: scroll; overflow-y: hidden;white-space: nowrap;max-height: 650px;position: relative;display: block">
     <mat-card class="example-card" *ngFor="let product of products"
@@ -57,7 +61,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>EDIT</button>
+        <button mat-button (click)="openProductDetails(product.productId)">EDIT</button>
         <mat-checkbox (change)="selectProduct(product, $event)" [(ngModel)]="product.selectedForAnnouncement" [checked]="product.selectedForAnnouncement">Select</mat-checkbox>
       </mat-card-actions>
     </mat-card>
