--- a/src/app/view/product/product.component.html
+++ b/src/app/view/product/product.component.html
@@ -26,7 +26,7 @@
     <button mat-raised-button style="width: 230px">
       Delete selected products
     </button>
-    <mat-paginator [length]="this.products.length" aria-label="Select page" #paginator (page)="pageChanged()"
+    <mat-paginator [length]="this.productsSearchForm.total"  aria-label="Select page" #paginator (page)="pageChanged()"
                    style="position: sticky; bottom: 0; width: 100%; background-color: #f0f0f0"></mat-paginator>
   </mat-toolbar-row>
 </mat-toolbar>
